Fix lines that were too wide

--- a/public/style.css
+++ b/public/style.css
@@ -43,5 +43,6 @@ table.tag_table_cls, table.tag_table_cls td {
 
 textarea {
   border:1px solid #999999;
-  font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
+  font-family:Consolas,Monaco,Lucida Console,Liberation Mono,
+  DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
 }
